# diff

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vson/bsdiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/vson/bsdiff/: BsPatchUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/vson/bsdiff/: ExampleUnitTest.java
diff算法C的资料/: CMakeLists.txt  bsdiff.c  bspatch.c  win32er.h
gradle/wrapper/: gradle-wrapper.properties
